--- a/Gamoitsani/Info.plist
+++ b/Gamoitsani/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>SUGGESTED_WORDS_COLLECTION_NAME</key>
+	<string>${SUGGESTED_WORDS_COLLECTION_NAME}</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Resources/Fonts/BPGNinoMtavruli.ttf</string>
@@ -23,5 +25,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>WORDS_COLLECTION_NAME</key>
+	<string>${WORDS_COLLECTION_NAME}</string>
 </dict>
 </plist>
