--- a/Gamoitsani/Resources/Swiftgen/swiftgen.yml
+++ b/Gamoitsani/Resources/Swiftgen/swiftgen.yml
@@ -1,5 +1,5 @@
-input_dir: Gamoitsani/Resources/
-output_dir: Gamoitsani/Resources/Generated/
+input_dir: ${PROJECT_ROOT}/Gamoitsani/Resources/
+output_dir: ${PROJECT_ROOT}/Gamoitsani/Resources/Generated/
 
 strings:
   inputs: Localization/en.lproj
