changed status bar color globally to light

--- a/Gamoitsani/Info.plist
+++ b/Gamoitsani/Info.plist
@@ -27,6 +27,8 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>WORDS_COLLECTION_NAME</key>
 	<string>${WORDS_COLLECTION_NAME}</string>
 </dict>
