--- a/Gamoitsani/Info.plist
+++ b/Gamoitsani/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>PROJECT_ROOT</key>
 	<string>${PROJECT_ROOT}</string>
 	<key>SUGGESTED_WORDS_COLLECTION_NAME</key>
