--- a/Gamoitsani/Resources/Info.plist
+++ b/Gamoitsani/Resources/Info.plist
@@ -239,7 +239,9 @@
 	<string>${SUGGESTED_WORDS_COLLECTION_NAME}</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Resources/Fonts/Mersad.ttf</string>
+		<string>Mersad.ttf</string>
+		<string>Ubuntu-Bold.ttf</string>
+		<string>Ubuntu-Medium.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
@@ -260,11 +262,21 @@
 	</dict>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>ADMOB_TEST_DEVICE_ID</key>
+	<string>${ADMOB_TEST_DEVICE_ID}</string>
 	<key>WORDS_COLLECTION_NAME</key>
 	<string>${WORDS_COLLECTION_NAME}</string>
 	<key>FacebookAdvertiserIDCollectionEnabled</key>
 	<true/>
 	<key>FacebookAutoLogAppEventsEnabled</key>
 	<true/>
+	<key>UMP_TEST_DEVICE_ID</key>
+	<string>${UMP_TEST_DEVICE_ID}</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>ka</string>
+		<string>uk</string>
+	</array>
 </dict>
 </plist>
