--- a/Gamoitsani/Resources/Swiftgen/swiftgen.yml
+++ b/Gamoitsani/Resources/Swiftgen/swiftgen.yml
@@ -1,17 +1,21 @@
 input_dir: ${PROJECT_ROOT}/Gamoitsani/Resources/
 output_dir: ${PROJECT_ROOT}/Gamoitsani/Resources/Generated/
 
-strings:
-  inputs: Localization/en.lproj
-  outputs:
-    - templatePath: xcassets-swift5.stencil
-      output: Localizable.swift
 xcassets:
   inputs:
     - Assets.xcassets
   outputs:
     - templateName: swift5
       output: Assets.swift
+strings:
+  inputs:
+    - Localization/Localizable.xcstrings
+  outputs:
+    - templateName: structured-swift5
+      output: Localizable.swift
+      params:
+        publicAccess: true
+        enumName: L10n
 fonts:
   inputs: SupportingFiles/Fonts
   outputs:
